All methods working and passing tests, except copy is shallow only
I struggled to find a way to deep copy a generic object.